--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo">
               <img src="pics/logoportfolio2.png" alt="soloppgang"> 
             </div>
-            <h1>Caroline Severinsen</h1>
+            <h1>Caroline Severinsen test test test</h1>
           </div>
 
           <nav class="navbar">
