--- a/kontakt.html
+++ b/kontakt.html
@@ -58,7 +58,7 @@
 <!--
             <div class="showcase">
                         
-              <img id="forsidebilde" src="pics/stativ2.png" alt="bilde av klesstativ">
+              <img id="forsidebilde" src="pics/stativ2.png" alt="bilde av ">
   
           </div>
 -->
