--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!--
             <div class="showcase">
                         
-              <img id="forsidebilde" src="pics/stativ2.png" alt="bilde av klesstativ">
+              <img id="forsidebilde" src="pics/stativ2.png" alt="bilde av ">
   
           </div>
 -->
